--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>While I'm getting sorted, go check out my GitHub at https://github.com/Robin8er</p>
 </body>
 </html>
