--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>While I'm getting sorted, go check out my GitHub at https://github.com/Robin8er</p>
+<h1>Hello World! :D</h1>
+<p>This website will become my personal website over time... but it isn't ready yet! (In fact, I've got a ton of stuff to do really...)</p>
+<p>While I'm getting sorted, you can check out my GitHub at: https://github.com/Robin8er</p>
 </body>
 </html>
