--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World! :D</h1>
 <p>This website will become my personal website over time... but it isn't ready yet! (In fact, I've got a ton of stuff to do really...)</p>
 <p>While I'm getting sorted, you can check out my GitHub at: https://github.com/Robin8er</p>
+<p>You can also find my LinkedIn at: www.linkedin.com/in/robin-shen-97760b234/</p>
 </body>
 </html>
